--- a/spain.ipynb
+++ b/spain.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b2bfbc59",
    "metadata": {},
    "outputs": [],
@@ -18,12 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6d5293cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "spain = gpd.read_file(r'C:\\Users\\rey_d\\Documents\\GitHub\\MAP_SPAIN\\Mapas\\PROVINCIAS.csv')"
+    "spain = gpd.read_file(r'C:\\Users\\rey_d\\Documents\\GitHub\\SPAIN_MAP\\Mapas\\PROVINCIAS.csv')"
    ]
   },
   {
